// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 3
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 3
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab Title 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab Title 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab Title 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          <p>
            Content of Tab Pane 1
          </p>
          <p>
            Content of Tab Pane 1
          </p>
          <p>
            Content of Tab Pane 1
          </p>
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/centered.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-centered"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 3
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-editable ant-tabs-card ant-tabs-editable-card"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-with-remove ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
            <button
              aria-label="remove"
              class="ant-tabs-tab-remove"
              tabindex="0"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-with-remove"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
            <button
              aria-label="remove"
              class="ant-tabs-tab-remove"
              tabindex="0"
              type="button"
            >
              <span
                aria-label="close"
                class="anticon anticon-close"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="close"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of Tab Pane 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar.md correctly 1`] = `
<div>
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div>
      <div />
      <div
        class="ant-tabs-nav site-custom-tab-bar"
        role="tablist"
      >
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-list"
            style="transform:translate(0px, 0px)"
          >
            <div
              class="ant-tabs-tab ant-tabs-tab-active"
            >
              <div
                aria-selected="true"
                class="ant-tabs-tab-btn"
                role="tab"
                tabindex="0"
              >
                Tab 1
              </div>
            </div>
            <div
              class="ant-tabs-tab"
            >
              <div
                aria-selected="false"
                class="ant-tabs-tab-btn"
                role="tab"
                tabindex="0"
              >
                Tab 2
              </div>
            </div>
            <div
              class="ant-tabs-tab"
            >
              <div
                aria-selected="false"
                class="ant-tabs-tab-btn"
                role="tab"
                tabindex="0"
              >
                Tab 3
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
        <div
          class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="null-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ant-tabs-nav-more"
            id="null-more"
            style="visibility:hidden;order:1"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          style="height:200px"
          tabindex="0"
        >
          Content of Tab Pane 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-tab-bar-node.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            tab 1
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            tab 2
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            tab 3
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
        </div>
        <div
          class="ant-tabs-tab ant-tabs-tab-disabled"
        >
          <div
            aria-disabled="true"
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
          >
            Tab 2
          </div>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 3
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-editable ant-tabs-card ant-tabs-editable-card"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-with-remove ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 1
          </div>
          <button
            aria-label="remove"
            class="ant-tabs-tab-remove"
            tabindex="0"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ant-tabs-tab ant-tabs-tab-with-remove"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 2
          </div>
          <button
            aria-label="remove"
            class="ant-tabs-tab-remove"
            tabindex="0"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Tab 3
          </div>
        </div>
        <button
          aria-label="Add tab"
          class="ant-tabs-nav-add"
          type="button"
        >
          <span
            aria-label="plus"
            class="anticon anticon-plus"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <defs />
              <path
                d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
              />
              <path
                d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <button
        aria-label="Add tab"
        class="ant-tabs-nav-add"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs />
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
Array [
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Extra Action
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>,
  <br />,
  <br />,
  <br />,
  <div>
    You can also specify its direction or both side
  </div>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-checkbox-group"
  >
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="left"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        left
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="right"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        right
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn"
          style="margin-right:15px"
          type="button"
        >
          <span>
            Left Extra Action
          </span>
        </button>
      </div>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ant-tabs-extra-content"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Right Extra Action
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            <span>
              <span
                aria-label="apple"
                class="anticon anticon-apple"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="apple"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-10.6 267c-14.3 19.9-28.7 35.6-41.9 45.7-10.5 8-18.6 11.4-24 11.6-9-.1-17.7-2.3-34.7-8.8-1.2-.5-2.5-1-4.2-1.6l-4.4-1.7c-17.4-6.7-27.8-10.3-41.1-13.8-18.6-4.8-37.1-7.4-56.9-7.4-20.2 0-39.2 2.5-58.1 7.2-13.9 3.5-25.6 7.4-42.7 13.8-.7.3-8.1 3.1-10.2 3.9-3.5 1.3-6.2 2.3-8.7 3.2-10.4 3.6-17 5.1-22.9 5.2-.7 0-1.3-.1-1.8-.2-1.1-.2-2.5-.6-4.1-1.3-4.5-1.8-9.9-5.1-16-9.8-14-10.9-29.4-28-45.1-49.9-27.5-38.6-53.5-89.8-66-125.7-15.4-44.8-23-87.7-23-128.6 0-60.2 17.8-106 48.4-137.1 26.3-26.6 61.7-41.5 97.8-42.3 5.9.1 14.5 1.5 25.4 4.5 8.6 2.3 18 5.4 30.7 9.9 3.8 1.4 16.9 6.1 18.5 6.7 7.7 2.8 13.5 4.8 19.2 6.6 18.2 5.8 32.3 9 47.6 9 15.5 0 28.8-3.3 47.7-9.8 7.1-2.4 32.9-12 37.5-13.6 25.6-9.1 44.5-14 60.8-15.2 4.8-.4 9.1-.4 13.2-.1 22.7 1.8 42.1 6.3 58.6 13.8-37.6 43.4-57 96.5-56.9 158.4-.3 14.7.9 31.7 5.1 51.8 6.4 30.5 18.6 60.7 37.9 89 14.7 21.5 32.9 40.9 54.7 57.8-11.5 23.7-25.6 48.2-40.4 68.8zm-94.5-572c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
                  />
                </svg>
              </span>
              Tab 1
            </span>
          </div>
        </div>
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            <span>
              <span
                aria-label="android"
                class="anticon anticon-android"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="android"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M448.3 225.2c-18.6 0-32 13.4-32 31.9s13.5 31.9 32 31.9c18.6 0 32-13.4 32-31.9.1-18.4-13.4-31.9-32-31.9zm393.9 96.4c-13.8-13.8-32.7-21.5-53.2-21.5-3.9 0-7.4.4-10.7 1v-1h-3.6c-5.5-30.6-18.6-60.5-38.1-87.4-18.7-25.7-43-47.9-70.8-64.9l25.1-35.8v-3.3c0-.8.4-2.3.7-3.8.6-2.4 1.4-5.5 1.4-8.9 0-18.5-13.5-31.9-32-31.9-9.8 0-19.5 5.7-25.9 15.4l-29.3 42.1c-30-9.8-62.4-15-93.8-15-31.3 0-63.7 5.2-93.8 15L389 79.4c-6.6-9.6-16.1-15.4-26-15.4-18.6 0-32 13.4-32 31.9 0 6.2 2.5 12.8 6.7 17.4l22.6 32.3c-28.7 17-53.5 39.4-72.2 65.1-19.4 26.9-32 56.8-36.7 87.4h-5.5v1c-3.2-.6-6.7-1-10.7-1-20.3 0-39.2 7.5-53.1 21.3-13.8 13.8-21.5 32.6-21.5 53v235c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 3.9 0 7.4-.4 10.7-1v93.5c0 29.2 23.9 53.1 53.2 53.1H331v58.3c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 20.3 0 39.2-7.5 53.1-21.3 13.8-13.8 21.5-32.6 21.5-53v-58.2H544v58.1c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 20.4 0 39.2-7.5 53.1-21.6 13.8-13.8 21.5-32.6 21.5-53v-58.2h31.9c29.3 0 53.2-23.8 53.2-53.1v-91.4c3.2.6 6.7 1 10.7 1 20.3 0 39.2-7.5 53.1-21.3 13.8-13.8 21.5-32.6 21.5-53v-235c-.1-20.3-7.6-39-21.4-52.9zM246 609.6c0 6.8-3.9 10.6-10.7 10.6-6.8 0-10.7-3.8-10.7-10.6V374.5c0-6.8 3.9-10.6 10.7-10.6 6.8 0 10.7 3.8 10.7 10.6v235.1zm131.1-396.8c37.5-27.3 85.3-42.3 135-42.3s97.5 15.1 135 42.5c32.4 23.7 54.2 54.2 62.7 87.5H314.4c8.5-33.4 30.5-64 62.7-87.7zm39.3 674.7c-.6 5.6-4.4 8.7-10.5 8.7-6.8 0-10.7-3.8-10.7-10.6v-58.2h21.2v60.1zm202.3 8.7c-6.8 0-10.7-3.8-10.7-10.6v-58.2h21.2v60.1c-.6 5.6-4.3 8.7-10.5 8.7zm95.8-132.6H309.9V364h404.6v399.6zm85.2-154c0 6.8-3.9 10.6-10.7 10.6-6.8 0-10.7-3.8-10.7-10.6V374.5c0-6.8 3.9-10.6 10.7-10.6 6.8 0 10.7 3.8 10.7 10.6v235.1zM576.1 225.2c-18.6 0-32 13.4-32 31.9s13.5 31.9 32 31.9c18.6 0 32.1-13.4 32.1-32-.1-18.6-13.4-31.8-32.1-31.8z"
                  />
                </svg>
              </span>
              Tab 2
            </span>
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane"
        role="tabpanel"
        style="display:none"
        tabindex="-1"
      />
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Tab 2
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/nest.md correctly 1`] = `
<div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="ant-tabs ant-tabs-top"
            style="height:300px"
          >
            <div
              class="ant-tabs-nav"
              role="tablist"
            >
              <div
                class="ant-tabs-nav-wrap"
              >
                <div
                  class="ant-tabs-nav-list"
                  style="transform:translate(0px, 0px)"
                >
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 0
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab ant-tabs-tab-active"
                  >
                    <div
                      aria-selected="true"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 1
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 2
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 3
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 4
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 5
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 6
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 7
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 8
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 9
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 10
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 11
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 12
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 13
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 14
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 15
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 16
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 17
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 18
                    </div>
                  </div>
                  <div
                    class="ant-tabs-tab"
                  >
                    <div
                      aria-selected="false"
                      class="ant-tabs-tab-btn"
                      role="tab"
                      tabindex="0"
                    >
                      Tab 19
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
              <div
                class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
              >
                <button
                  aria-controls="null-more-popup"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-hidden="true"
                  class="ant-tabs-nav-more"
                  id="null-more"
                  style="visibility:hidden;order:1"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="ellipsis"
                    class="anticon anticon-ellipsis"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="ellipsis"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="ant-tabs-content-holder"
            >
              <div
                class="ant-tabs-content ant-tabs-content-top"
              >
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="false"
                  class="ant-tabs-tabpane ant-tabs-tabpane-active"
                  role="tabpanel"
                  tabindex="0"
                >
                  TTTT 1
                </div>
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
                <div
                  aria-hidden="true"
                  class="ant-tabs-tabpane"
                  role="tabpanel"
                  style="display:none"
                  tabindex="-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="margin-bottom:16px"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      Tab position：
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-select ant-select-single ant-select-show-arrow"
      >
        <div
          class="ant-select-selector"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              readonly=""
              role="combobox"
              style="opacity:0"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="ant-select-selection-item"
            title="top"
          >
            top
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of Tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small"
    style="margin-bottom:32px"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-card"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Card Tab 1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Card Tab 2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Card Tab 3
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of card tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top"
    style="height:220px"
  >
    <div
      class="ant-tabs-nav"
      role="tablist"
    >
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-list"
          style="transform:translate(0px, 0px)"
        >
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-0
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-active"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-1
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-2
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-3
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-4
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-5
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-6
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-7
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-8
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-9
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-10
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-11
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-12
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-13
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-14
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-15
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-16
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-17
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-18
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-19
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-20
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-21
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-22
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-23
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-24
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-25
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-26
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-27
            </div>
          </div>
          <div
            class="ant-tabs-tab ant-tabs-tab-disabled"
          >
            <div
              aria-disabled="true"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
            >
              Tab-28
            </div>
          </div>
          <div
            class="ant-tabs-tab"
          >
            <div
              aria-disabled="false"
              aria-selected="false"
              class="ant-tabs-tab-btn"
              role="tab"
              tabindex="0"
            >
              Tab-29
            </div>
          </div>
          <div
            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
          />
        </div>
      </div>
      <div
        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
      >
        <button
          aria-controls="null-more-popup"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-hidden="true"
          class="ant-tabs-nav-more"
          id="null-more"
          style="visibility:hidden;order:1"
          tabindex="-1"
          type="button"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-tabs-content-holder"
    >
      <div
        class="ant-tabs-content ant-tabs-content-top"
      >
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
          tabindex="0"
        >
          Content of tab 1
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane"
          role="tabpanel"
          style="display:none"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;
